k8s/ingress/ingress_apps_1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-cd
spec:
  ingressClassName: ingress-nginx-public
  rules:
  - host: hc.daredelabs.com.br
    http:
      paths:
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-c-service
            port:
              number: 80

  - host: hd.daredelabs.com.br
    http:
      paths:  
      - path: "/"
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-d-service
            port:
              number: 80
